--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.11.4",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1"
   },
@@ -37,6 +38,7 @@
     "@types/jwt-simple": "^0.5.33",
     "@types/mongoose": "^4.7.19",
     "@types/morgan": "^1.7.32",
+    "@types/multer": "^1.3.2",
     "@types/node": "^8.0.17",
     "@types/passport": "^0.3.3",
     "@types/passport-jwt": "^2.0.22"
