--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "validator": "^8.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
@@ -36,11 +38,13 @@
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.36",
     "@types/jwt-simple": "^0.5.33",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^4.7.19",
     "@types/morgan": "^1.7.32",
     "@types/multer": "^1.3.2",
     "@types/node": "^8.0.17",
     "@types/passport": "^0.3.3",
-    "@types/passport-jwt": "^2.0.22"
+    "@types/passport-jwt": "^2.0.22",
+    "@types/validator": "^6.2.2"
   }
 }
