--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch src/**/*.ts --exec ts-node src/server.ts"
+    "start": "nodemon --watch src/**/*.ts --exec ts-node src/server.ts",
+    "start:debug": "ts-node --inspect=5858 --debug-brk --ignore false src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,8 @@
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2",
     "validator": "^8.0.0"
   },
   "devDependencies": {
